add redis client config and setup