@@ -14,7 +14,27 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     implementation group: 'org.eclipse.jetty.ee10', name: 'jetty-ee10-servlet', version: '12.0.15'
+    // https://mvnrepository.com/artifact/redis.clients/jedis
+    implementation group: 'redis.clients', name: 'jedis', version: '5.2.0'
+    // https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv
+    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 
+
+
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += '--enable-preview'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(23)
+    }
 }
 
 test {
